--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1' // e.g. Transformations
+    implementation 'androidx.compose.runtime:runtime-livedata:1.1.1' // e.g. observeAsState on LiveData
     implementation 'androidx.activity:activity-compose:1.4.0'
 
     // Navigation Compose
